--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,6 +22,7 @@ jobs:
           - "--features mmap,spin_mutex"
     steps:
     - uses: actions/checkout@v4
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
     - name: Clippy
       run: cargo clippy ${{ matrix.features }}
     - name: Build
